//----------------------------------------------------------------------------
// Copyright 2022, Ed Keenan, all rights reserved.
//----------------------------------------------------------------------------

#ifndef PYRAMID_MESH_H
#define PYRAMID_MESH_H

namespace Azul
{
	void CreatePyramidMesh();
}

#endif

// --- End of File ---
